Horstmann, CoreJava, volume1 - chap06 - Functional Interfaces