@@ -3,6 +3,7 @@ package chap06_Interfaces.interfaces;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
+import java.util.Comparator;
 
 /**
  * This program demonstrates the use of the Comparable interface.
@@ -20,16 +21,23 @@ public class EmployeeSortTest {
 
         Arrays.sort(staff);
         for (Employee e : staff)
-           System.out.println("name=" + e.getName() + ", salary=" + e.getSalary());
+            System.out.println("name=" + e.getName() + ", salary=" + e.getSalary());
 
         System.out.println();
         Arrays.sort(staff, (o1, o2) -> o1.getName().compareTo(o2.getName()));
         for (Employee e : staff)
-           System.out.println("name=" + e.getName() + ", salary=" + e.getSalary());
+            System.out.println("name=" + e.getName() + ", salary=" + e.getSalary());
 
-       Path path = Paths.get("jdk", "jre", "bin");
-       System.out.println(path);
-       path = Path.of("c:", "V", "java");
-       System.out.println(path);
+        System.out.println();
+        Path path = Paths.get("jdk", "jre", "bin");
+        System.out.println("Paths.get: " + path);
+        path = Path.of("c:", "V", "java");
+        System.out.println("Path.of:   " + path);
+
+        System.out.println();
+        Arrays.sort(staff, Comparator.comparing(Employee::getSalary));
+        for (Employee e : staff)
+            System.out.println("name=" + e.getName() + ", salary=" + e.getSalary());
+
     }
 }
